--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ local.properties
 .cache-main
 .scala_dependencies
 .worksheet
+pecunia/target/classes/META-INF/maven/com.capgemini/pecunia/pom.properties
+pecunia/target/pecunia-0.0.1-SNAPSHOT.jar
