--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="pecunia/src/main/java"/>
 	<classpathentry kind="lib" path="pecunia/target/pecunia-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="pecunia/target/classes"/>
