--- a/pecunia/src/main/resources/application.properties
+++ b/pecunia/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password = rVzUeu2dGF
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
-
+spring.datasource.max-active=5
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
