--- a/pecunia/src/main/resources/application.properties
+++ b/pecunia/src/main/resources/application.properties
@@ -42,3 +42,12 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#logger configuration
+logging.level.org=ERROR
+logging.level.com=ERROR
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.com.capgemini.pecunia=TRACE
+logging.file=application.log
+
